# chess-report-interpreter

./: .gitignore  README.md  data.tms  data.tms.sample  player.py  pyproject.toml  source.py  tms_fileio.py  to-do.txt
data/: rr_data.ctr.sample  rr_data.tms.sample  swiss_data.ctr.sample
jinja_renders/: tournament_report.html
jinja_templates/: tournament_report.jinja
src/chess_report_interpreter/: __init__.py  generate_report.py  main.py
src/chess_report_interpreter/file/: __init__.py  tms.py
src/chess_report_interpreter/rating/cfc/: rating.py
src/chess_report_interpreter/tournament/: __init__.py  ctr_parser.py  data_analyzer.py  data_display.py  parser.py  player.py  result.py  tms_parser.py  tournament.py
static/: styles.css
tests/: __init__.py  test_ctr_parser.py  test_data_analyzer.py  test_data_display.py  test_player.py  test_result.py  test_tms_parser.py  test_tournament.py
