[project]
name = "chess-report-interpreter"
version = "0.1.0"
description = ""
authors = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependencies] = []

[project.optional_dependencies]
dev = [
    "ruff == 0.12.1"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line-length = 88

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "./src",
    "./src/chess_report_interpreter"
]